...
            "state" : "translated",
            "value" : "英雄选择"
          }
        }
      }
    },
    "Heroes" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "英雄"
          }
        }
      }
    },
    "Home" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "D2A"
...
            "state" : "translated",
            "value" : "玩家"
          }
        }
      }
    },
    "Players, Heroes, Matches" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "玩家，英雄，比赛"
...
            "state" : "translated",
            "value" : "地区"
          }
        }
      }
    },
    "Register Player" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "注册资料"
...
            "state" : "translated",
            "value" : "神杖升级"
          }
        }
      }
    },
    "Search" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "搜索"
...
            "state" : "translated",
            "value" : "搜索英雄"
          }
        }
      }
    },
    "Search ID" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "搜索ID"
...
