...
    func provideProfileOptionsCollection(
        for intent: DynamicUserSelectionIntent,
        with completion: @escaping (INObjectCollection<Profile>?, Error?) -> Void
    ) {
        let context = persistanceProvider.container.viewContext
        let fetchRequest: NSFetchRequest<UserProfile> = UserProfile.fetchRequest()
        fetchRequest.predicate = NSPredicate(format: "favourite = %d", true)

        let results = try? context.fetch(fetchRequest)

        let profiles: [Profile] =
            results?.filter({ !$0.register }).map { userProfile in
                return Profile(
...
